# gpt3-discord

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile
src/: README.md  app.rs  config_loader.rs  main.rs  openai.rs
src/app/: config.rs  error.rs  openai.rs
src/config_loader/: defaults.rs
