[package]
name = "gpt3-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = {version = "1.0.139", features = ["derive"]}
serde_json = "1.0.82"
discord = { git = "https://github.com/SpaceManiac/discord-rs" }
